# count-objects

./: .gitignore  CMakeLists.txt  Classifier.cpp  Classifier.h  ObjectsExtractor.cpp  ObjectsExtractor.h  ParamsClassifier.cpp  ParamsClassifier.h  README.md  TemplateMatchClassifier.cpp  TemplateMatchClassifier.h  classification.cpp  classification.h  main.cpp  objectextraction.cpp  objectextraction.h  utils.cpp  utils.h
